// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardTable Cell should be able to "center" align 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  padding: 0;
  padding: 1.5rem 2.4rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

.c0 .c1 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          align="center"
          class="c0"
        >
          <span
            class="c1 c2"
            textalign="initial"
            textcolor="inherit"
            title="text"
          >
            text
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CardTable Cell should be able to "left" align 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  padding: 0;
  padding: 1.5rem 2.4rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  overflow: hidden;
}

.c0 .c1 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          align="left"
          class="c0"
        >
          <span
            class="c1 c2"
            textalign="initial"
            textcolor="inherit"
            title="text"
          >
            text
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CardTable Cell should be able to "right" align 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  padding: 0;
  padding: 1.5rem 2.4rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  overflow: hidden;
}

.c0 .c1 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          align="right"
          class="c0"
        >
          <span
            class="c1 c2"
            textalign="initial"
            textcolor="inherit"
            title="text"
          >
            text
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CardTable Cell should render cell with text component with wrap text as false 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  padding: 0;
  padding: 1.5rem 2.4rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  overflow: hidden;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          align="left"
          class="c0"
        >
          <span
            class="c1"
            data="text"
            rowdata="[object Object]"
            rowid="1"
            textalign="initial"
            textcolor="inherit"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CardTable Cell should render cell with text component with wrap text as true 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  padding: 0;
  padding: 1.5rem 2.4rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  overflow: hidden;
}

.c0 .c1 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          align="left"
          class="c0"
        >
          <span
            class="c1 c2"
            data="text"
            rowdata="[object Object]"
            rowid="1"
            textalign="initial"
            textcolor="inherit"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CardTable Cell should render cell with text properly 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  padding: 0;
  padding: 1.5rem 2.4rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  overflow: hidden;
}

.c0 .c1 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          align="left"
          class="c0"
        >
          <span
            class="c1 c2"
            textalign="initial"
            textcolor="inherit"
            title="text"
          >
            text
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
